tests/algorithms/x/PHP/web_programming/search_books_by_isbn.out
Warning: file_get_contents(https://openlibrary.org/isbn/0140328726.json): Failed to open stream: Network is unreachable in /workspace/mochi/tests/algorithms/x/PHP/web_programming/search_books_by_isbn.php on line 55

Warning: Trying to access array offset on null in /workspace/mochi/tests/algorithms/x/PHP/web_programming/search_books_by_isbn.php on line 150

Warning: Trying to access array offset on null in /workspace/mochi/tests/algorithms/x/PHP/web_programming/search_books_by_isbn.php on line 156

Warning: Trying to access array offset on null in /workspace/mochi/tests/algorithms/x/PHP/web_programming/search_books_by_isbn.php on line 156

Warning: Trying to access array offset on null in /workspace/mochi/tests/algorithms/x/PHP/web_programming/search_books_by_isbn.php on line 156

Warning: Trying to access array offset on null in /workspace/mochi/tests/algorithms/x/PHP/web_programming/search_books_by_isbn.php on line 156

Fatal error: Uncaught TypeError: count(): Argument #1 ($value) must be of type Countable|array, null given in /workspace/mochi/tests/algorithms/x/PHP/web_programming/search_books_by_isbn.php:85
Stack trace:
#0 /workspace/mochi/tests/algorithms/x/PHP/web_programming/search_books_by_isbn.php(156): mochi_join(NULL, ', ')
#1 /workspace/mochi/tests/algorithms/x/PHP/web_programming/search_books_by_isbn.php(160): summarize_book(NULL)
#2 /workspace/mochi/tests/algorithms/x/PHP/web_programming/search_books_by_isbn.php(168): main()
#3 {main}
  thrown in /workspace/mochi/tests/algorithms/x/PHP/web_programming/search_books_by_isbn.php on line 85